# molecular-dynamics

./: CMakeLists.txt  README.md  configura.f90  decl_precision.f90  inicializacion.sh  main.f90  variables_comunes.f90
resultados/: datos_DM1.txt  datos_DM3.txt
src/: configura.f90  configuracion.txt  main.f90  mi_random.f90  pot_lj.f90  variables_comunes.f90  velocity_verlet.f90
